--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,8 @@ sqlalchemy>=2.0.0
 fastapi>=0.100.0
 uvicorn>=0.23.0
 pydantic>=2.0.0
+redis>=4.5.0
+celery>=5.3.0
+flower>=1.0.0
+python-multipart>=0.0.6
+email-validator>=2.0.0
